--- a/index.html
+++ b/index.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Sabrina Gehrke</h1>
+        <nav>
+            <button><a href = "index.html">HOME</a></button>
+            <button><a href = "about.html">ABOUT</a></button>
+            <button><a href = "contact.html">CONTACT</a></button>
+            <button><a href = "projects.html">PROJECT</a></button>
+        </nav>
+    </header>
+    <!--Top Section Opener-->
+<section class ="topSection">
+    <img src = "https://picsum.photos/600/350" alt = "Random Photo"/> 
+<div class = "description" >
+    <h2>Sabrina Gehrke</h2>
+    <!--DONT FORGET TO EDIT THE TEXT BELOW!-->
+    <button class = "Information-Button"><a href = "projects.html"></a>My Projects</button>
+    <p>DONT FORGET TO FILL THIS OUT -ABOUT YOU- INFORMATION PAGE, TECH JOURNY,
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.
+        Lorem elits conscetrua amet, consectetur adipiscing elit, sed.</p>
+</div>
+</section> <!--Top Section Closer-->
+<section class = "midSection">
+    <div class = "row">
+        <!--Image 1-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 2-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 3-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 4-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--SECOND ROW OF PORTFOLIO PHOTOS-->
+        <!--Image 5-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 6-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 7-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+        <!--Image 8-->
+        <div class="port">
+            <img src = "https://picsum.photos/300/200" alt="Randomly Generated Photo"/>
+            <p>Portfolio Project</p>
+        </div>
+    </div>
+</section>
+
+ <footer>
+    <h2>Like what you see?</h2>
+    <button class = "Contact-Button"><a href="contact.html">Contact Me</a></button>
+ </footer>   
 </body>
 </html>
